# Customer-Support-Ticket-Prioritization-with-Reinforcement-Learning

./: Dockerfile  README.md  dqn_model.pth  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml  train.py
customer_support_ticket_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: app.py  dqn_agent.py  meta_env_environment.py  requirements.txt  tasks.py
