[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-ticket-env"
version = "0.1.0"
description = "OpenEnv environment for ticket prioritization with DQN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "numpy>=1.26.0",
    "torch>=2.1.0",
    "matplotlib>=3.7.2",
    "tqdm>=4.66.1",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"